--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,34 @@
-Package            Version
------------------- --------
-Brotli             1.1.0
-certifi            2024.2.2
-charset-normalizer 3.3.2
-idna               3.6
-Jinja2             3.1.3
-MarkupSafe         2.1.5
-mutagen            1.47.0
-pip                23.0.1
-pycryptodomex      3.20.0
-PyQt5              5.15.10
-PyQt5-Qt5          5.15.2
-PyQt5-sip          12.13.0
-qt-material        2.14
-requests           2.31.0
-setuptools         66.1.1
-urllib3            2.2.1
-websockets         12.0
-yt-dlp             2024.4.9
+Package               Version
+--------------------- --------
+anyio                 4.4.0
+beautifulsoup4        4.12.3
+blinker               1.8.2
+Brotli                1.1.0
+certifi               2024.7.4
+charset-normalizer    3.3.2
+click                 8.1.7
+Flask                 3.0.3
+h11                   0.14.0
+httpcore              1.0.5
+httpx                 0.27.0
+idna                  3.7
+itsdangerous          2.2.0
+Jinja2                3.1.4
+lyricsgenius          3.0.1
+MarkupSafe            2.1.5
+mutagen               1.47.0
+pip                   23.0.1
+pycryptodomex         3.20.0
+PyQt5                 5.15.11
+PyQt5-Qt5             5.15.14
+PyQt5_sip             12.15.0
+qt-material           2.14
+requests              2.32.3
+setuptools            66.1.1
+sniffio               1.3.1
+soupsieve             2.5
+urllib3               2.2.2
+websockets            12.0
+Werkzeug              3.0.3
+youtube-search-python 1.6.6
+yt-dlp                2024.8.1
